@@ -111,6 +111,9 @@ where XXXXXX is the bug number as listed below.
 254164  OS X task_info: UNKNOWN task message [id 3405, to mach_task_self(), 
         reply 0x........]
 269360  s390x: Fix addressing mode selection for compare-and-swap
+302630  Memcheck on multithreaded program fails with Assertion 
+        'sizeof(UWord) == sizeof(UInt)' failed in m_syscall.c
+        == 326797
 319274  Fix unhandled syscall: unix:410 (sigsuspend_nocancel) on OS X
 333051  mmap of huge pages fails due to incorrect alignment
         == 339163
